parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__attribute_ref-2.snap
---
source: parser/src/parser/parser.rs
description: a.b.c
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            Attribute(
                Attribute {
                    node: Node {
                        start: 0,
                        end: 5,
                    },
                    value: Attribute(
                        Attribute {
                            node: Node {
                                start: 0,
                                end: 3,
                            },
                            value: Name(
                                Name {
                                    node: Node {
                                        start: 0,
                                        end: 1,
                                    },
                                    id: "a",
                                },
                            ),
                            attr: "b",
                        },
                    ),
                    attr: "c",
                },
            ),
        ),
    ],
}
