parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__class_def_statement-2.snap
---
source: parser/src/parser/parser.rs
description: "class a():\n    pass"
---
Module {
    node: Node {
        start: 0,
        end: 19,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 19,
                },
                name: "a",
                bases: [],
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 15,
                                end: 19,
                            },
                        },
                    ),
                ],
                decorator_list: [],
            },
        ),
    ],
}
