parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__class_def_statement.snap
---
source: parser/src/parser/parser.rs
description: "class a: pass"
---
Module {
    node: Node {
        start: 0,
        end: 13,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 13,
                },
                name: "a",
                bases: [],
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 9,
                                end: 13,
                            },
                        },
                    ),
                ],
                decorator_list: [],
            },
        ),
    ],
}
